--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-# Created by https://www.gitignore.io/api/androidstudio,android
-# Edit at https://www.gitignore.io/?templates=androidstudio,android
+# Created by https://www.toptal.com/developers/gitignore/api/android,androidstudio,linux,git,kotlin,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=android,androidstudio,linux,git,kotlin,java
 
 ### Android ###
 # Built application files
 *.apk
+*.aar
 *.ap_
 *.aab
 
@@ -17,6 +18,7 @@
 bin/
 gen/
 out/
+#  Uncomment the following line in case you need and you don't have the release build type files in your app
 release/
 
 # Gradle files
@@ -59,6 +61,7 @@ captures/
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+.cxx/
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
@@ -91,7 +94,72 @@ output.json
 
 # Replacement of .externalNativeBuild directories introduced
 # with Android Studio 3.5.
-.cxx/
+
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
+
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
+
+### Java ###
+# Compiled class file
+
+# Log file
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Kotlin ###
+# Compiled class file
+
+# Log file
+
+# BlueJ files
+
+# Mobile Tools for Java (J2ME)
+
+# Package Files #
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
 
 ### AndroidStudio ###
 # Covers files to be ignored for android development using Android Studio.
@@ -201,4 +269,4 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-# End of https://www.gitignore.io/api/androidstudio,android
+# End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,linux,git,kotlin,java
